Remove universal selector for [data-type="list"]

--- a/apps/sms/index.html
+++ b/apps/sms/index.html
@@ -92,7 +92,7 @@
           </menu>
           <h1 data-l10n-id="messages">Messages</h1>
         </header>
-        <article id="threads-container" class="view-body edit-container" data-type="list">
+        <article id="threads-container" class="list-container view-body edit-container" data-type="list">
         </article>
 
         <div id="threads-no-messages" class="hide">
@@ -203,12 +203,12 @@
             </section>
           </div>
         </div>
-        <article id="messages-container" class="view-body article-list edit-container" data-type="list">
+        <article id="messages-container" class="list-container view-body article-list edit-container" data-type="list">
         </article>
-        <article id="information-participants" class="view-body article-list hide" data-type="list">
+        <article id="information-participants" class="list-container view-body article-list hide" data-type="list">
           <ul class="contact-list"></ul>
         </article>
-        <article id="information-report" class="view-body article-list report-view hide" data-type="list">
+        <article id="information-report" class="list-container view-body article-list report-view hide" data-type="list">
           <div class="description">
             <p class="type"></p>
             <p class="subject"></p>
