Eliminate unnecessarily specific checkbox UI selector.

--- a/apps/sms/index.html
+++ b/apps/sms/index.html
@@ -405,7 +405,7 @@
       <!--
       <label class="pack-checkbox danger">
         <input type="checkbox" value="${id}">
-        <span></span>
+        <span class="checkbox-ui"></span>
       </label>
       <section class="bubble">
         <h1 class="subject">
@@ -425,7 +425,7 @@
       <!--
       <label class="pack-checkbox danger">
         <input type="checkbox" value="${id}" data-mode="${mode}">
-        <span></span>
+        <span class="checkbox-ui"></span>
       </label>
       <a href="${hash}">
         <aside class="icon icon-unread icon-draft">icon</aside>
